# FINSABER

./: .env.example  .gitignore  404.html  README.md  finsaber_env.yml  finsaber_ta310.yml  index.html  metrics.py  mkdocs.yml  objects.inv  pyproject.toml  requirements-complete.txt  requirements.txt  sitemap.xml
.cache/41/: cache.db
.cache/42/: cache.db
.github/workflows/: docs.yml
api/: index.html
architecture/: index.html
backtest/: __init__.py  backtest_engine.py  backtest_engine_iso.py  experiment_runner.py  finsaber.py  finsaber_bt.py  results_aggregation.ipynb  run_baselines_exp.py  run_exp.py  run_llm_traders_exp.py
backtest/data_util/: __init__.py  backtest_dataset.py  dataset_factory.py  download.py  finmem_dataset.py  finsaber_dataset.py  finsaber_parquet_dataset.py  market_data_provider.py  trading_data.py
backtest/output/: SPX_Classification.csv  equity_with_time.csv  market_regime_analysis.ipynb  merge_results.ipynb  merge_results.py  recalculate_sortino_ratio.ipynb  sharpe_records.json  significance_test.py
backtest/scripts/: run_cherry_both_fincon.sh  (+4 more)
concepts/: index.html
configuration/: index.html
data/: index.html
deployment/: index.html
docs/: api.md  architecture.md  concepts.md  configuration.md  data.md  deployment.md  examples.md  execution.md  finagent-reproduction.md  index.md  installation.md  quickstart.md  results.md  strategies.md  tradingagent-reproduction.md  tradingagent_environment_assessment.md  tradingagent_transformation_plan.md  validation.md
examples/: custom_dataset_example.py  index.html
execution/: index.html
finsaber/: __init__.py  finsaber.py  finsaber_bt.py
finsaber.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
installation/: index.html
preliminary/: backtest_engine.py  operation_utils.py  results_aggregation.ipynb  run_exp.py  trade_config.py
quickstart/: index.html
reproduction_results/: README.md
results/: index.html
rl_traders/: finrl_strategy.py
search/: search_index.json
slurm/: README.md  aggregate_finagent_windows.py  finagent_one_window.py  make_finagent_window_manifest.py  sbatch_finagent_window.sh  submit_finagent_gpt4o_mini_array.sh
strategies/: index.html
strats_configs/: finagent_config_cherry.json  finagent_config_composite.json  finagent_config_normal.json  finmem_config_cherry.json  finmem_config_composite.json  finmem_config_normal.json  finmem_window_2024.json  finmem_window_2025.json  tradingagents_window_2024.json  tradingagents_window_2025.json
tests/: test_backtest_metrics.py  test_data_adapters.py  test_execution_models.py  test_filing_section_overlay.py  test_finagent_direct_data.py  test_finagent_experiment_manifest.py  test_finagent_headless_plots.py  test_finmem_artifacts.py  test_finmem_data_loading.py  test_finsaber_bt_metrics.py  test_finsaber_bt_result_output_dir.py  test_finsaber_checkpoint.py  test_framework_execution.py  test_llm_cost_monitor.py  test_public_imports.py  test_result_writer.py  test_tradingagents_experiment_launcher.py
validation/: index.html
(+760 files in other folders)
